--- a/mobile-design-library/src/main/res/layout/customizable_generic_button.xml
+++ b/mobile-design-library/src/main/res/layout/customizable_generic_button.xml
@@ -1,6 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/customGenericButtonContainer"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:background="@drawable/round_corner"
+    android:padding="@dimen/dimen_8dp">
+
+    <ImageView
+        android:id="@+id/customizableButtonIv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:contentDescription="@null"
+        android:minWidth="@dimen/dimen_32dp"
+        android:minHeight="@dimen/dimen_32dp"
+        android:src="@color/cardview_dark_background"
+        android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/customizableButtonTitleTv"
+        style="@style/CustomisedButton.Title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingHorizontal="@dimen/dimen_8dp"
+        android:text="@string/button_title"
+        app:layout_constraintBottom_toTopOf="@+id/customizableButtonSubTitleTv"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@id/customizableButtonIv"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/customizableButtonSubTitleTv"
+        style="@style/CustomisedButton.SubTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingHorizontal="@dimen/dimen_8dp"
+        android:text="@string/button_subtitle"
+        android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@id/customizableButtonIv"
+        app:layout_constraintTop_toBottomOf="@+id/customizableButtonTitleTv" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
