--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,18 +4,42 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
-    android:layout_margin="@dimen/dimen_16dp">
+    android:layout_margin="@dimen/dimen_16dp"
+    tools:context=".MainActivity">
 
     <com.example.mobile.design.lib.CustomizableGenericButton
+        android:id="@+id/button1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:buttonSubtitleText="Sub title"
-        app:buttonTitleText="Button title"
-        app:iconVisible="true"
         app:backgroundImage="@drawable/round_corner"
+        app:buttonSubtitleText="Sub title - 1 4 8  5 47 5 2 5 4 6 8 52 8 898 "
+        app:buttonTitleText="Button title - 78 5 41 15 5 45 5 54 4 5 5 5 2 2 2  2 2"
+        app:iconVisible="true"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:subtitleVisible="true" />
+
+    <com.example.mobile.design.lib.CustomizableGenericButton
+        android:id="@+id/button2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/dimen_16dp"
+        app:backgroundImage="@drawable/round_corner"
+        app:buttonSubtitleText="Sub title"
+        app:buttonTitleText="Button title"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button1"
+        app:subtitleVisible="true" />
+
+    <com.example.mobile.design.lib.CustomizableGenericButton
+        android:id="@+id/button3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/dimen_16dp"
+        app:backgroundImage="@drawable/round_corner"
+        app:buttonSubtitleText="Sub title"
+        app:buttonTitleText="Button title"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button2" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
