--- a/mobile-design-library/src/main/res/layout/customizable_generic_button.xml
+++ b/mobile-design-library/src/main/res/layout/customizable_generic_button.xml
@@ -1,50 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/customGenericButtonContainer"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="@drawable/round_corner"
-    android:padding="@dimen/dimen_8dp">
+    android:layout_gravity="center"
+    android:minWidth="140dp"
+    android:minHeight="60dp">
 
     <ImageView
         android:id="@+id/customizableButtonIv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/dimen_8dp"
+        android:layout_marginTop="@dimen/dimen_8dp"
+        android:layout_marginBottom="@dimen/dimen_8dp"
         android:contentDescription="@null"
         android:minWidth="@dimen/dimen_32dp"
         android:minHeight="@dimen/dimen_32dp"
-        android:src="@color/cardview_dark_background"
+        android:src="@drawable/button_selected"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/customizableButtonTitleTv"
-        style="@style/CustomisedButton.Title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingHorizontal="@dimen/dimen_8dp"
-        android:text="@string/button_title"
-        app:layout_constraintBottom_toTopOf="@+id/customizableButtonSubTitleTv"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@id/customizableButtonIv"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/customizableButtonSubTitleTv"
-        style="@style/CustomisedButton.SubTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingHorizontal="@dimen/dimen_8dp"
-        android:text="@string/button_subtitle"
-        android:visibility="visible"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@id/customizableButtonIv"
-        app:layout_constraintTop_toBottomOf="@+id/customizableButtonTitleTv" />
+        app:layout_constraintStart_toEndOf="@+id/customizableButtonIv"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <TextView
+            android:id="@+id/customizableButtonTitleTv"
+            style="@style/CustomisedButton.Title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Button title - 78 5 41 15 5 45 5 54 4 5 5 5 2 2 2  2 2" />
+
+        <TextView
+            android:id="@+id/customizableButtonSubTitleTv"
+            style="@style/CustomisedButton.SubTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/button_subtitle"
+            android:visibility="visible" />
+
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
