--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,21 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
-    android:layout_margin="@dimen/dimen_16dp">
+    android:layout_margin="@dimen/dimen_16dp"
+    android:orientation="vertical"
+    tools:context=".MainActivity">
 
     <com.example.mobile.design.lib.CustomizableGenericButton
+        android:id="@+id/button1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:buttonSubtitleText="Sub title"
-        app:buttonTitleText="Button title"
-        app:iconVisible="true"
         app:backgroundImage="@drawable/round_corner"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:buttonSubtitleText="ButtonSubtitle"
+        app:buttonTitleText="ButtonTitle"
+        app:icon="@drawable/ic_user"
+        app:iconVisible="true"
         app:subtitleVisible="true" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <com.example.mobile.design.lib.CustomizableGenericButton
+        android:id="@+id/button2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/dimen_16dp"
+        app:backgroundImage="@drawable/round_corner"
+        app:buttonSubtitleText="ButtonSubtitle"
+        app:buttonTitleText="ButtonTitle"
+        app:subtitleVisible="true" />
+
+    <com.example.mobile.design.lib.CustomizableGenericButton
+        android:id="@+id/button3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/dimen_16dp"
+        app:backgroundImage="@drawable/round_corner"
+        app:buttonSubtitleText="ButtonSubtitle"
+        app:buttonTitleText="ButtonTitle" />
+
+</LinearLayout>
