--- a/mobile-design-library/src/main/res/layout/customizable_generic_button.xml
+++ b/mobile-design-library/src/main/res/layout/customizable_generic_button.xml
@@ -1,50 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/customGenericButtonContainer"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="@drawable/round_corner"
-    android:padding="@dimen/dimen_8dp">
+    android:gravity="center"
+    app:layout_constraintHeight_min="60dp"
+    app:layout_constraintWidth_min="160dp"
+    android:layout_margin="@dimen/dimen_8dp">
 
     <ImageView
         android:id="@+id/customizableButtonIv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
         android:contentDescription="@null"
-        android:minWidth="@dimen/dimen_32dp"
-        android:minHeight="@dimen/dimen_32dp"
-        android:src="@color/cardview_dark_background"
-        android:visibility="visible"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_marginEnd="@dimen/dimen_8dp"
+        android:scaleType="fitCenter"
+        android:adjustViewBounds="true"
+        android:src="@drawable/ic_user"
+        android:focusable="false"
+        android:importantForAccessibility="no"
+        android:focusableInTouchMode="false"
+        android:visibility="visible" />
 
-    <TextView
-        android:id="@+id/customizableButtonTitleTv"
-        style="@style/CustomisedButton.Title"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingHorizontal="@dimen/dimen_8dp"
-        android:text="@string/button_title"
-        app:layout_constraintBottom_toTopOf="@+id/customizableButtonSubTitleTv"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@id/customizableButtonIv"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:gravity="center"
+        android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/customizableButtonSubTitleTv"
-        style="@style/CustomisedButton.SubTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingHorizontal="@dimen/dimen_8dp"
-        android:text="@string/button_subtitle"
-        android:visibility="visible"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@id/customizableButtonIv"
-        app:layout_constraintTop_toBottomOf="@+id/customizableButtonTitleTv" />
+        <TextView
+            android:id="@+id/customizableButtonTitleTv"
+            style="@style/CustomisedButton.Title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/button_title" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <TextView
+            android:id="@+id/customizableButtonSubTitleTv"
+            style="@style/CustomisedButton.SubTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/button_subtitle"
+            android:visibility="visible" />
+    </LinearLayout>
+
+</LinearLayout>
