login and sign-up added

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,6 +16,7 @@
         app:buttonSubtitleText="ButtonSubtitle"
         app:buttonTitleText="ButtonTitle"
         app:icon="@drawable/ic_user"
+        app:iconTintColor="@color/purple_700"
         app:iconVisible="true"
         app:subtitleVisible="true" />
 
