--- a/mobile-design-library/src/main/res/layout/customizable_generic_button.xml
+++ b/mobile-design-library/src/main/res/layout/customizable_generic_button.xml
@@ -14,7 +14,6 @@
         android:layout_width="48dp"
         android:layout_height="48dp"
         android:contentDescription="@null"
-        android:layout_marginEnd="@dimen/dimen_8dp"
         android:scaleType="fitCenter"
         android:adjustViewBounds="true"
         android:src="@drawable/ic_user"
@@ -27,7 +26,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:padding="@dimen/dimen_8dp">
 
         <TextView
             android:id="@+id/customizableButtonTitleTv"
