--- a/mobile-design-library/src/main/res/values/mdl_theme.xml
+++ b/mobile-design-library/src/main/res/values/mdl_theme.xml
@@ -8,7 +8,7 @@
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorOnSecondary">@color/black</item>
+        <item name="colorOnSecondary">@color/white</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
 
@@ -16,6 +16,8 @@
 
         <item name="buttonTitleTextColor">@color/black</item>
         <item name="buttonSubtitleTextColor">@color/black</item>
+        <item name="inputTextColor">@color/black</item>
+        <item name="defaultTextColor">@color/black</item>
 
         <item name="buttonTitleTextSize">@dimen/textSize_16sp</item>
         <item name="buttonSubtitleTextSize">@dimen/textSize_16sp</item>
@@ -37,6 +39,8 @@
 
         <item name="buttonTitleTextColor">?attr/colorSecondary</item>
         <item name="buttonSubtitleTextColor">?attr/colorSecondary</item>
+        <item name="inputTextColor">?attr/colorSecondary</item>
+        <item name="defaultTextColor">?attr/colorSecondary</item>
 
         <item name="buttonTitleTextSize">@dimen/textSize_14sp</item>
         <item name="buttonSubtitleTextSize">@dimen/textSize_14sp</item>
