--- a/mobile-design-library/src/main/res/layout/customizable_generic_button.xml
+++ b/mobile-design-library/src/main/res/layout/customizable_generic_button.xml
@@ -4,10 +4,9 @@
     android:id="@+id/customGenericButtonContainer"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:gravity="center"
+    android:gravity="center_vertical"
     app:layout_constraintHeight_min="60dp"
-    app:layout_constraintWidth_min="160dp"
-    android:layout_margin="@dimen/dimen_8dp">
+    app:layout_constraintWidth_min="160dp" >
 
     <ImageView
         android:id="@+id/customizableButtonIv"
@@ -16,18 +15,20 @@
         android:contentDescription="@null"
         android:scaleType="fitCenter"
         android:adjustViewBounds="true"
-        android:src="@drawable/ic_user"
         android:focusable="false"
+        android:layout_marginTop="@dimen/dimen_8dp"
+        android:layout_marginStart="@dimen/dimen_8dp"
+        android:layout_marginBottom="@dimen/dimen_8dp"
         android:importantForAccessibility="no"
         android:focusableInTouchMode="false"
         android:visibility="visible" />
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:orientation="vertical"
-        android:padding="@dimen/dimen_8dp">
+        android:layout_margin="@dimen/dimen_8dp">
 
         <TextView
             android:id="@+id/customizableButtonTitleTv"
