--- a/app/src/main/res/layout/fragment_signup.xml
+++ b/app/src/main/res/layout/fragment_signup.xml
@@ -7,6 +7,7 @@
         <variable
             name="viewModel"
             type="com.example.sample.app.login.signup.SignUpViewModel" />
+        <import type="android.text.TextUtils" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -28,7 +29,8 @@
             android:textColorHint="?attr/inputTextColor"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            android:onTextChanged="@{(text, start, before, count) -> viewModel.onTextChanged(text.toString(), viewModel.userName, viewModel.password, loginButton)}" />
 
         <EditText
             android:id="@+id/usernameEt"
@@ -44,7 +46,8 @@
             android:textColorHint="?attr/inputTextColor"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/fullNameEt" />
+            app:layout_constraintTop_toBottomOf="@+id/fullNameEt"
+            android:onTextChanged="@{(text, start, before, count) -> viewModel.onTextChanged(viewModel.fullName, text.toString(), viewModel.password, loginButton)}" />
 
         <EditText
             android:id="@+id/passwordEt"
@@ -62,25 +65,28 @@
             android:textColorHint="?attr/inputTextColor"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/usernameEt" />
+            app:layout_constraintTop_toBottomOf="@+id/usernameEt"
+            android:onTextChanged="@{(text, start, before, count) -> viewModel.onTextChanged(viewModel.fullName, viewModel.userName, text.toString(), loginButton)}" />
+
 
         <com.example.mobile.design.lib.CustomizableGenericButton
             android:id="@+id/loginButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/dimen_16dp"
-            android:onClick="@{() -> viewModel.registerUser()}"
+            android:onClick="@{() -> viewModel.registerUser(loginButton)}"
             app:backgroundImage="@drawable/button_border"
+            app:buttonState="disabled"
             app:buttonTitleText="Register"
+            app:buttonTitleTextColor="@color/white"
             app:icon="@drawable/ic_user"
             app:iconTintColor="@color/white"
             app:iconVisible="true"
-            app:buttonTitleTextColor="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/passwordEt"
-            app:layout_constraintVertical_bias="0.1" />
+            app:layout_constraintVertical_bias="0.3" />
 
         <ProgressBar
             android:id="@+id/loading"
