--- a/mobile-design-library/src/main/res/values/mdl_colors.xml
+++ b/mobile-design-library/src/main/res/values/mdl_colors.xml
@@ -7,4 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="disabledColor">#989D9F</color>
+    <color name="enabledColor">#1137F8</color>
+    <color name="pressedColor">#FFEB3B</color>
+    <color name="selectedColor">#009688</color>
 </resources>
