--- a/mobile-design-library/src/main/res/drawable/button_selector.xml
+++ b/mobile-design-library/src/main/res/drawable/button_selector.xml
@@ -1,37 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:state_pressed="true">
-        <shape>
-            <solid android:color="#FF5722" />
-            <corners android:radius="8dp" />
-            <padding android:bottom="0dp" android:left="0dp" android:right="0dp" android:top="0dp" />
-        </shape>
-    </item>
-
-    <item android:state_focused="true">
-        <shape>
-            <solid android:color="#0948D5" />
-            <corners android:radius="8dp" />
-            <padding android:bottom="0dp" android:left="0dp" android:right="0dp" android:top="0dp" />
-        </shape>
-    </item>
-
-    <item android:state_enabled="true">
-        <shape>
-            <solid android:color="#4CAF50" />
-            <corners android:radius="8dp" />
-            <padding android:bottom="0dp" android:left="0dp" android:right="0dp" android:top="0dp" />
-        </shape>
-    </item>
-
-
-    <item>
-        <shape>
-            <solid android:color="#B8B8B8" />
-            <corners android:radius="8dp" />
-            <padding android:bottom="0dp" android:left="0dp" android:right="0dp" android:top="0dp" />
-        </shape>
-    </item>
+    <item android:state_pressed="true" android:drawable="@drawable/button_faded" />
+    <item android:state_pressed="false" android:drawable="@drawable/button_highlighted" />
 
 </selector>
