button selector issue fix

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,7 +18,6 @@
             android:id="@+id/button1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:backgroundImage="@drawable/round_corner"
             app:buttonSubtitleText="ButtonSubtitle"
             app:buttonTitleText="ButtonTitle"
             app:icon="@drawable/ic_settings"
@@ -33,7 +32,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/dimen_16dp"
-            app:backgroundImage="@drawable/round_corner"
             app:buttonSubtitleText="ButtonSubtitle"
             app:buttonTitleText="ButtonTitle"
             app:layout_constraintStart_toStartOf="parent"
@@ -45,7 +43,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/dimen_16dp"
-            app:backgroundImage="@drawable/round_corner"
             app:buttonSubtitleText="ButtonSubtitle"
             app:buttonTitleText="ButtonTitle"
             app:layout_constraintStart_toStartOf="parent"
@@ -72,8 +69,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/dimen_16dp"
-            app:backgroundImage="@drawable/button_faded"
             app:buttonTitleText="Logout"
+            app:buttonState="enabled"
             app:buttonTitleTextColor="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
