--- a/mobile-design-library/src/main/res/values/attrs.xml
+++ b/mobile-design-library/src/main/res/values/attrs.xml
@@ -20,20 +20,16 @@
         <attr name="buttonTitleTextColor" />
         <attr name="buttonSubtitleTextColor" />
         <attr name="icon" />
-        <attr name="iconTintColor" />
         <attr name="buttonTitleText" />
         <attr name="buttonSubtitleText" />
         <attr name="buttonTitleTextSize" />
         <attr name="buttonSubtitleTextSize" />
-        <attr name="backgroundImage" format="reference" />
-        <attr name="backgroundColor" format="color" />
         <attr name="iconVisible" format="boolean" />
         <attr name="subtitleVisible" format="boolean" />
         <attr name="buttonState">
-            <flag name="disabled" value="0" />
-            <flag name="enabled" value="1" />
-            <flag name="pressed" value="2" />
-            <flag name="selected" value="3" />
+            <flag name="none" value="0" />
+            <flag name="disabled" value="1" />
+            <flag name="enabled" value="2" />
         </attr>
     </declare-styleable>
 
